--- a/module_19/templates/fourth_task/base_menu.html
+++ b/module_19/templates/fourth_task/base_menu.html
@@ -42,7 +42,7 @@
     <header>
         {% block back %}
         <button><a href="/main_page"> На Главную страницу </a></button>
-        <button><a href="/"> Регистрация </a> </button>
+        <button><a href="/"> Авторизация </a> </button>
         {% endblock %}
     </header>
 
