--- a/module_19/templates/fifth_task/authorizations.html
+++ b/module_19/templates/fifth_task/authorizations.html
@@ -13,7 +13,7 @@
     {% endblock %}
     <header>
         <h1>Авторизация</h1>
-        <a href="/registration_page">Регистрация</a>
+        <a href="{% url 'registration_page' %}">Регистрация</a>
     </header>
     <p></p>
 
