--- a/module_19/templates/fifth_task/registration_page.html
+++ b/module_19/templates/fifth_task/registration_page.html
@@ -13,7 +13,7 @@
     {% endblock %}
     <header>
         <h1>Регистрация</h1>
-        <a href="/main_page">Главная страница</a>
+        <a href="{% url 'main_page' %}">Главная страница</a>
     </header>
     <p></p>
 
